<resources>
    <string name="app_name">MeetUp</string>
    <string name="home">Home</string>
    <string name="near">Near</string>
    <string name="browser">Browser</string>
    <string name="my_page">My page</string>
    <string name="news">News</string>
    <string name="popular">Popular</string>
    <string name="error">Error</string>
    <string name="n_a">N/A</string>
    <string name="today">To day</string>
    <string name="yesterday">Yesterday</string>
    <string name="day_ago">day ago</string>
    <string name="permanent">Permanent</string>
    <string name="input_keyword">Input keyword</string>
    <string name="current_upcoming">Current or upcoming</string>
    <string name="past">Past</string>
    <string name="final_result">Final result!</string>
    <string name="no_matching_result">No matching result!</string>
    <string name="sort_by_popular">By popular</string>
    <string name="sort_by_date">By date</string>
    <string name="to_day">To day</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="weekend">Weekend</string>
    <string name="next_week">Next week</string>
    <string name="end_of_month">End of Month</string>
    <string name="next_month">Next month</string>
    <string name="forever">Forever</string>
    <string name="end">End</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fullname">Fullname</string>
    <string name="already_a_member"><u>Already a member? Login</u></string>
    <string name="forgot_password_under_line"><u>Forgot password</u></string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="reset_password">Reset password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be between 6 -> 16 character</string>
    <string name="please_check_again">Please check again</string>
    <string name="reset_email_success">Reset email success</string>
    <string name="profile">Profile</string>
    <string name="personal">Personal</string>
    <string name="venue">Venue</string>
    <string name="going">Going</string>
    <string name="went">Went</string>
    <string name="logout">Logout</string>
    <string name="comfirm_logout">Are you sure you want to logout?</string>
    <string name="update_success">Update success</string>
    <string name="follow_success">Follow success</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="token_expired">Token is expired, please login again!</string>
    <string name="setting">Setting</string>
    <string name="please_grant_permission">Please grant permission to use the LOCATION to experience this functionality</string>
    <string name="not_connect">Not connected!</string>
    <string name="connecting">Connecting...!</string>
    <string name="category">Category</string>
    <string name="conection_error">Connection error. Swipe down to try again!</string>
    <string name="update_data">Update data</string>
    <string name="update">Update</string>
</resources>
