<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimary"
        app:title="@string/profile"
        app:titleTextColor="@android:color/white"/>

    <ImageView
        android:id="@+id/image_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:scaleType="centerCrop"
        android:layout_margin="@dimen/dp_10"
        android:src="@drawable/avatar"/>

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/image_avatar"
        app:layout_constraintLeft_toRightOf="@+id/image_avatar"
        android:textSize="@dimen/dp_20"
        android:textColor="@color/color_mine_shaft"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/dp_10"/>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_avatar"
        android:background="@color/color_alto"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>

    <TextView
        android:id="@+id/lable_personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_avatar"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/color_mine_shaft"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_venue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lable_personal"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/venue"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_location_on_black_24dp"
        android:textAlignment="textStart"
        android:textSize="@dimen/sp_18"
        android:drawablePadding="@dimen/dp_10"
        android:background="@drawable/background_button_profile"
        android:padding="@dimen/dp_15"/>

    <Button
        android:id="@+id/button_going"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_venue"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/going"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_event_note_black_24dp"
        android:textAlignment="textStart"
        android:background="@drawable/background_button_profile"
        android:textSize="@dimen/sp_18"
        android:drawablePadding="@dimen/dp_10"
        android:padding="@dimen/dp_15"/>

    <Button
        android:id="@+id/button_went"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_going"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/went"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_event_available_black_24dp"
        android:textAlignment="textStart"
        android:textSize="@dimen/sp_18"
        android:background="@drawable/background_button_profile"
        android:drawablePadding="@dimen/dp_10"
        android:padding="@dimen/dp_15"/>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_went"
        android:background="@color/color_alto"
        android:layout_margin="@dimen/dp_10"/>

<Button
android:id="@+id/button_logout"
android:layout_width="0dp"
android:layout_height="wrap_content"
app:layout_constraintLeft_toLeftOf="parent"
app:layout_constraintRight_toRightOf="parent"
app:layout_constraintTop_toBottomOf="@+id/button_went"
android:layout_marginLeft="@dimen/dp_10"
android:layout_marginRight="@dimen/dp_10"
android:layout_marginTop="@dimen/dp_10"
android:text="@string/logout"
android:textAllCaps="false"
android:drawableLeft="@drawable/ic_exit_to_app_black_24dp"
android:textAlignment="textStart"
android:textSize="@dimen/sp_18"
android:background="@drawable/background_button_profile"
android:drawablePadding="@dimen/dp_10"
android:padding="@dimen/dp_15"/>

    </android.support.constraint.ConstraintLayout>
