<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/white"
        android:elevation="@dimen/dp_8"/>

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/dp_20"
        android:elevation="@dimen/dp_8"
        android:background="?attr/selectableItemBackgroundBorderless"/>

    <com.rikkei.meetup.common.EditextClearable
        android:id="@+id/edit_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_keyword"
        android:background="@drawable/background_edit_search"
        app:layout_constraintLeft_toRightOf="@+id/image_back"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/dp_20"
        android:paddingTop="@dimen/dp_8"
        android:paddingBottom="@dimen/dp_8"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_10"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/color_tundora"
        android:inputType="text"
        android:imeOptions="actionSearch"
        android:maxLines="1"
        android:elevation="@dimen/dp_8"/>

    <RadioGroup
        android:id="@+id/radio_group_filter"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        android:checkedButton="@id/radio_button_upcoming"
        android:elevation="@dimen/dp_8"
        android:background="@android:color/white">

        <RadioButton
            android:id="@+id/radio_button_upcoming"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/current_upcoming"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:textStyle="bold"
            android:textSize="@dimen/sp_16"
            android:textColor="@drawable/selector_checkbox"/>

        <RadioButton
            android:id="@+id/radio_button_past"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/past"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:textStyle="bold"
            android:textSize="@dimen/sp_16"
            android:textColor="@drawable/selector_checkbox"/>

    </RadioGroup>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_event"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_event_upcoming"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_gallery"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_event_past"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_gallery"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/text_lable_msg_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_matching_result"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/text_alert_connection_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/conection_error"
                android:textColor="@color/color_mine_shaft"
                android:background="@android:color/white"
                android:visibility="gone"/>

        </FrameLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/text_alert_network"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:background="@android:color/holo_red_dark"
        android:text="@string/not_connect"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:elevation="4dp"/>

</android.support.constraint.ConstraintLayout>
